--- a/waqar-mid-term.html
+++ b/waqar-mid-term.html
@@ -510,7 +510,7 @@
                       <td>Physics </td>
                       <td> <a href="./VU PAST PAPERS/waqar-mid-term/phy/midterm made by waqar solved by hadi.rar"
                           download>PHY-101</a> &nbsp;
-                        <!--<a href="">PHY-301</a> &nbsp;-->
+                        <a href="">PHY-301</a> &nbsp;-->
                       </td>
                     </tr>
                     <!-- <tr>
