--- a/waqar-mid-term.html
+++ b/waqar-mid-term.html
@@ -422,7 +422,7 @@
                     <tr>
                       <td>ECO</td>
                       <td>Economics</td>
-                      <td><a href="./VU PAST PAPERS/waqar-mid-term/eco/midterm made by Waqar and solved by Hadi.rar"
+                      <td><a href="./VU PAST PAPERS/waqar-mid-term/eco/Eco401 midterm made by Waqar and solved by Hadi.rar"
                           download>ECO-401</a> &nbsp;
                         <!--<a href="">ECO-402</a> &nbsp; <a href="">ECO-403</a> &nbsp; <a href="">ECO-406</a> &nbsp;-->
                       </td>
@@ -528,7 +528,7 @@
                       <td>STA</td>
                       <td>Statistics</td>
                       <td> <a
-                          href="./VU PAST PAPERS/waqar-mid-term/sta/mid term made by waqar shiddu and solved by hadi (1).rar"
+                          href="./VU PAST PAPERS/waqar-mid-term/sta/sta301 mid term made by waqar shiddu and solved by hadi (1).rar"
                           download>STA-301</a> &nbsp;
                         <!--<a href="">STA-630</a>-->
                       </td>
