--- a/waqar-mid-term.html
+++ b/waqar-mid-term.html
@@ -445,7 +445,7 @@
                     <tr>
                       <td>ISL</td>
                       <td>Islamic Studies</td>
-                      <td> <a href="./VU PAST PAPERS/waqar-mid-term/isl/midterm made by waqar and solved by hadi.rar"
+                      <td> <a href="./VU PAST PAPERS/waqar-mid-term/isl/Isl201 midterm made by waqar and solved by hadi.rar"
                           download>ISL-201</a> &nbsp;
                       </td>
                     </tr>
@@ -459,7 +459,7 @@
                       <td>Mass Media</td>
                       <td>
                         <!--<a href="">MCM-101</a> &nbsp;--> <a
-                          href="./VU PAST PAPERS/waqar-mid-term/mcm/mid term made by waqar shiddu and solved by hadi.rar"
+                          href="./VU PAST PAPERS/waqar-mid-term/mcm/mcm301 mid term made by waqar shiddu and solved by hadi.rar"
                           download>MCM-301</a> &nbsp;
                       </td>
                     </tr>
@@ -473,7 +473,7 @@
                       <td> Finance And Management</td>
                       <td>
                         <!--<a href="">MGT-101</a> &nbsp; <a href="">MGT-201</a> &nbsp; <a href="">MGT-211</a> &nbsp; <a href="">MGT-301</a> &nbsp; <a href="">MGT-401</a> &nbsp; <a href="">MGT-402</a> &nbsp; <a href="">MGT-411</a> &nbsp; --><a
-                          href="./VU PAST PAPERS/waqar-mid-term/mgt/mid term made by waqar shiddu and solved by hadi.rar"
+                          href="./VU PAST PAPERS/waqar-mid-term/mgt/Mgt501 mid term made by waqar shiddu and solved by hadi.rar"
                           download>MGT-501</a>
                         <!--<br>  <a href="">MGT-502</a> &nbsp; <a href="">MGT-503</a> &nbsp; <a href="">MGT-510</a> &nbsp; <a href="">MGT-601</a> &nbsp; <a href="">MGT-602</a> &nbsp; <a href="">MGT-603</a> &nbsp; <a href="">MGT-610</a> &nbsp; <a href="">MGT-611</a> &nbsp;<br> <a href="">MGT-613</a> &nbsp; <a href="">MGT-111</a> &nbsp;-->
                       </td>
@@ -488,14 +488,14 @@
                       <td>Mathematics</td>
                       <td>
                         <!--<a href="">MTH-001</a> &nbsp; <a href="">MTH-101</a> &nbsp; <a href="">MTH-201</a> &nbsp;--><a
-                          href="./VU PAST PAPERS/waqar-mid-term/mth/mid term create by waqar and solved by waqar.rar"
+                          href="./VU PAST PAPERS/waqar-mid-term/mth/mth202 mid term create by waqar and solved by waqar.rar"
                           download>MTH-202</a> &nbsp; <a
-                          href="./VU PAST PAPERS/waqar-mid-term/mth/term create by waqar and solved by hadi.rar"
+                          href="./VU PAST PAPERS/waqar-mid-term/mth/Mth301mid term create by waqar and solved by hadi.rar"
                           download>MTH-301</a> &nbsp;
                         <!--<a href="">MTH-302</a> &nbsp;--> <a
-                          href="./VU PAST PAPERS/waqar-mid-term/mth/mid term made by waqar shiddu and solved by hadi.rar"
+                          href="./VU PAST PAPERS/waqar-mid-term/mth/Mth401 mid term made by waqar shiddu and solved by hadi.rar"
                           download>MTH-401</a> &nbsp;
-                        <a href="./VU PAST PAPERS/waqar-mid-term/mth/mid term made by waqar shiddu and solved by hadi.rar"
+                        <a href="./VU PAST PAPERS/waqar-mid-term/mth/Mth501 mid term made by waqar shiddu and solved by hadi.rar"
                           download>MTH-501</a>
                         &nbsp;
                         <!--<a href="">MTH-601</a> &nbsp; <a href="">MTH-603</a> -->
@@ -508,9 +508,9 @@
                     <tr>
                       <td>PHY</td>
                       <td>Physics </td>
-                      <td> <a href="./VU PAST PAPERS/waqar-mid-term/phy/midterm made by waqar solved by hadi.rar"
+                      <td> <a href="./VU PAST PAPERS/waqar-mid-term/phy/phy101 midterm made by waqar solved by hadi.rar"
                           download>PHY-101</a> &nbsp;
-                        <a href="">PHY-301</a> &nbsp;-->
+                        <!-- <a href="./VU PAST PAPERS/waqar-mid-term/phy">PHY-301</a> &nbsp; -->
                       </td>
                     </tr>
                     <!-- <tr>
